--- a/src/Web/Server/appsettings.Development.json
+++ b/src/Web/Server/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "MongoDb": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "mra-assets"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
