added seed data

--- a/src/Web/Server/appsettings.Development.json
+++ b/src/Web/Server/appsettings.Development.json
@@ -1,7 +1,8 @@
 {
   "MongoDb": {
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "mra-assets"
+    "DatabaseName": "mra-assets",
+    "Seeder": false
   },
   "Logging": {
     "LogLevel": {
