--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -15,11 +15,12 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Application\Application.csproj" />
+      <ProjectReference Include="..\Web\Client\Client.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Common\" />
-      <Folder Include="Identity\" />
+      <Folder Include="Common\Security\" />
+      <Folder Include="Identity\Services\" />
     </ItemGroup>
 
 </Project>
