--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -10,10 +10,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\tests\Domain.UnitTests\Domain.UnitTests.csproj" />
       <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
       <PackageReference Include="AutoMapper" Version="13.0.1" />
       <PackageReference Include="FluentValidation" Version="11.9.0" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
@@ -22,6 +24,14 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
+      <PackageReference Include="MRA.Configurations" Version="2.0.5" />
+      <PackageReference Include="MRA.Identity.Application.Contract" Version="1.0.2" />
+      <PackageReference Include="MRApiCommon" Version="1.0.9" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Features\Employees\Command\" />
+      <Folder Include="Features\Employees\Queries\" />
     </ItemGroup>
 
 </Project>
