--- a/src/Web/Server/appsettings.Development.json
+++ b/src/Web/Server/appsettings.Development.json
@@ -2,7 +2,7 @@
   "MongoDb": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "mra-assets",
-    "Seeder": false
+    "Seeder": true
   },
   "Logging": {
     "LogLevel": {
