Use Serilog with Microsoft.Extensions.Logging.ILogger

--- a/src/Web/Server/appsettings.Development.json
+++ b/src/Web/Server/appsettings.Development.json
@@ -19,7 +19,7 @@
       "Serilog.Sinks.Console"
     ],
     "MinimumLevel": {
-      "Default": "Debug"
+      "Default": "Information"
     },
     "WriteTo": [
       {
