--- a/src/Web/Server/appsettings.Development.json
+++ b/src/Web/Server/appsettings.Development.json
@@ -1,4 +1,6 @@
 {
+  "SeeedEmployeePath": "C:\\Users\\User\\Desktop\\MRA.AssetsManagement\\src\\Web\\Client\\wwwroot\\Employees.json",
+  
   "MongoDb": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "mra-assets",
