--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -9,4 +9,9 @@
         <AssemblyName>MRA.AssetsManagement.Domain</AssemblyName>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="11.9.0" />
+      <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
+    </ItemGroup>
+
 </Project>
