--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -11,11 +11,11 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Domain\Domain.csproj" />
+      <ProjectReference Include="..\Web\Shared\Shared.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
-      <PackageReference Include="FluentValidation" Version="11.9.0" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
       <PackageReference Include="MediatR" Version="12.2.0" />
@@ -29,7 +29,6 @@
 
     <ItemGroup>
       <Folder Include="Common\Identity\" />
-      <Folder Include="Features\Services\" />
     </ItemGroup>
 
 </Project>
