--- a/src/Web/Server/appsettings.Development.json
+++ b/src/Web/Server/appsettings.Development.json
@@ -19,12 +19,16 @@
       "Serilog.Sinks.Console"
     ],
     "MinimumLevel": {
-      "Default": "Information"
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information"
+      }
     },
     "WriteTo": [
       {
         "Name": "Console"
       }
-    ]
+    ],
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
   }
 }
