--- a/src/Web/Server/appsettings.Development.json
+++ b/src/Web/Server/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "IdentityServer": "https://localhost:7245/api/",
   "MongoDb": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "mra-assets",
