--- a/src/Web/Shared/Shared.csproj
+++ b/src/Web/Shared/Shared.csproj
@@ -12,4 +12,9 @@
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
+    <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
+  </ItemGroup>
 </Project>
