--- a/src/Web/Server/appsettings.Development.json
+++ b/src/Web/Server/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "IdentityServer": "https://localhost:7245/api/",
+  "IdentityServer": "https://api.srp.tj/staging/identity/",
   "MongoDb": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "mra-assets",
@@ -30,6 +30,6 @@
         "Name": "Console"
       }
     ],
-    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   }
 }
