--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-﻿version: '3.1'
+﻿version: '3.4'
 
 services:
   apiserver:
@@ -6,8 +6,12 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
     ports:
-      - "5200:5201"
+      - "5001:80"
     depends_on:
       - mongodb
   
