89 Added the ability to get a report

--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -30,6 +30,7 @@
 
     <ItemGroup>
         <Folder Include="Common\Services\" />
+        <Folder Include="Features\Purchas\Command\" />
         <Folder Include="Features\Services\" />
     </ItemGroup>
 
