Finish Asset Detail page

--- a/src/Web/Server/appsettings.Development.json
+++ b/src/Web/Server/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "IdentityServer": "https://api.srp.tj/staging/identity/",
+  "IdentityServer": "https://api.srp.tj/staging/identity",
   "MongoDb": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "mra-assets",
