89-Added date to table

--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -33,7 +33,7 @@
     <ItemGroup>
         <Folder Include="Features\Services\" />
         <Folder Include="Common\Services\" />
-        <Folder Include="Features\Purchas\Command\" />
+        <Folder Include="Features\Purchase\Command\" />
     </ItemGroup>
 
 </Project>
