--- a/src/Web/Server/appsettings.Staging.json
+++ b/src/Web/Server/appsettings.Staging.json
@@ -1,7 +1,7 @@
 {
   "IdentityServer": "https://api.srp.tj/staging/identity",
   "MongoDb": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://mongodb:27017",
     "DatabaseName": "mra-assets",
     "Seeder": true
   },
@@ -17,7 +17,8 @@
   },
   "Serilog": {
     "Using": [
-      "Serilog.Sinks.Console"
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Seq"
     ],
     "MinimumLevel": {
       "Default": "Information",
@@ -26,7 +27,13 @@
       }
     },
     "WriteTo": [
-      { "Name": "Console" }
+      { "Name": "Console" },
+      { 
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://assets-seq:5341"
+        }
+      }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   }
