--- a/src/Web/Client/Client.csproj
+++ b/src/Web/Client/Client.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.TextEditor" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.2" />
     <PackageReference Include="AWSSDK.Core" Version="3.7.100.14" />
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
