Fixed the commits

--- a/src/Web/Server/appsettings.json
+++ b/src/Web/Server/appsettings.json
@@ -3,7 +3,7 @@
     "ConnectionString": "mongodb://mongodb:27017",
     "DatabaseName": "mra-assets",
     "Seeder": true,
-    "AppVersion": 1
+    "Version": 1
   },
   "IdentityServer": "https://localhost:7245/api/",
   "Logging": {
