--- a/src/Web/Server/appsettings.Staging.json
+++ b/src/Web/Server/appsettings.Staging.json
@@ -36,5 +36,10 @@
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
+  "Application":
+  {
+    "Id": "6ba7b810-9dad-11d1-80b4-00c04fd430c8",
+    "ClientSecret": "mraAssetsManagementSecret"
   }
 }
