--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,16 @@ services:
       dockerfile: ./Dockerfile
     environment:
       - ASPNETCORE_ENVIRONMENT=Staging
-      - ASPNETCORE_URLS=http://+:443
+      - ASPNETCORE_URLS=http://+:442;https://+:443
       - ASPNETCORE_HTTPS_PORT=8001
+      - ASPNETCORE_HTTP_PORT=8002
       - ASPNETCORE_Kestrel__Certificates__Default__Password=cert1234
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
     volumes:
       - ${HOME}/.aspnet/https:/https/
     ports:
-      - "8001:443"
+      - "8001:442"
+      - "8002:443"
     depends_on:
       - mongodb
       - seq
