--- a/src/Web/Server/appsettings.Staging.json
+++ b/src/Web/Server/appsettings.Staging.json
@@ -3,7 +3,8 @@
   "MongoDb": {
     "ConnectionString": "mongodb://mongodb:27017",
     "DatabaseName": "mra-assets",
-    "Seeder": true
+    "Seeder": true,
+    "Version": 1
   },
   "Logging": {
     "LogLevel": {
