--- a/src/Web/Server/appsettings.Development.json
+++ b/src/Web/Server/appsettings.Development.json
@@ -35,5 +35,11 @@
   {
     "Id": "6ba7b810-9dad-11d1-80b4-00c04fd430c8",
     "ClientSecret": "mraAssetsManagementSecret"
-  }
+  },
+  "MraAssetsManagement-CORS": [
+    "https://localhost:7091",
+    "http://localhost:5202",
+    "https://assets.srp.tj",
+    "https://staging.assets.srp.tj"
+  ]
 }
