--- a/src/Web/Server/appsettings.Staging.json
+++ b/src/Web/Server/appsettings.Staging.json
@@ -1,5 +1,5 @@
 {
-  "IdentityServer": "https://api.srp.tj/staging/identity",
+  "IdentityServer": "http://10.111.7.79:5070/api",
   "MongoDb": {
     "ConnectionString": "mongodb://mongodb:27017",
     "DatabaseName": "mra-assets",
@@ -42,5 +42,11 @@
   {
     "Id": "6ba7b810-9dad-11d1-80b4-00c04fd430c8",
     "ClientSecret": "mraAssetsManagementSecret"
-  }
+  },
+  "MraAssetsManagement-CORS":[
+    "https://localhost:7091",
+    "http://localhost:5202",
+    "https://assets.srp.tj",
+    "https://staging.assets.srp.tj"
+  ]
 }
