--- a/src/Web/Client/wwwroot/appsettings.Staging.json
+++ b/src/Web/Client/wwwroot/appsettings.Staging.json
@@ -1,6 +1,6 @@
 {
   "IdentityClient": "https://staging.identity.srp.tj",
-  "AssetsManagementApiBaseAddress":"https://api.srp.tj/staging/assetsManagement/",
+  "AssetsManagementApiBaseAddress":"https://api.srp.tj/staging/assets/",
   "Application": {
     "Id": "6ba7b810-9dad-11d1-80b4-00c04fd430c8"
   }
