--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,18 +9,15 @@ services:
       dockerfile: ./Dockerfile
     environment:
       - ASPNETCORE_ENVIRONMENT=Staging
-      - ASPNETCORE_URLS=http://+:442;https://+:443
-      - ASPNETCORE_HTTPS_PORT=8001
+      - ASPNETCORE_URLS=http://+:443
       - ASPNETCORE_HTTP_PORT=8002
-      - ASPNETCORE_Kestrel__Certificates__Default__Password=cert1234
-      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
     volumes:
       - ${HOME}/.aspnet/https:/https/
     ports:
-      - "8001:442"
       - "8002:443"
     depends_on:
       - mongodb
+      - mongo-express
       - seq
   
   mongodb:
@@ -28,6 +25,22 @@ services:
     container_name: assets-db
     ports:
       - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+  
+  mongo-express:
+    image: mongo-express
+    container_name: assets-db-express
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongodb:27017/
+      ME_CONFIG_BASICAUTH: true
+      ME_CONFIG_BASICAUTH_USERNAME: MongoSrp
+      ME_CONFIG_BASICAUTH_PASSWORD: Mongo1234$
   
   seq:
     image: datalust/seq:latest
