--- a/src/Web/Server/appsettings.Staging.json
+++ b/src/Web/Server/appsettings.Staging.json
@@ -1,7 +1,7 @@
 {
   "IdentityServer": "http://10.111.7.79:5070/api",
   "MongoDb": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://srpuser:srppass@192.168.65.3:30168",
     "DatabaseName": "mra-assets",
     "Seeder": true,
     "Version": 1
