--- a/src/Web/Client/wwwroot/appsettings.Development.json
+++ b/src/Web/Client/wwwroot/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "IdentityClient": "https://staging.identity.srp.tj",
-  "AssetsManagementApiBaseAddress":"https://localhost:7098/api/",
+  "AssetsManagementApiBaseAddress":"http://localhost:8002/api/",
   "Application": {
     "Id": "6ba7b810-9dad-11d1-80b4-00c04fd430c8"
   }
