--- a/k8s/assets-secret.yml
+++ b/k8s/assets-secret.yml
@@ -8,4 +8,6 @@ data:
   mongo-root-password: c3JwcGFzcw==  #srppass
   mongo-express-username: TW9uZ29TcnA= #MongoSrp
   mongo-express-password: TW9uZ28xMjM0JA== #Mongo1234$
-  identity-client-secret: bXJhQXNzZXRzTWFuYWdlbWVudFNlY3JldA==
+  identity-client-secret: bXJhQXNzZXRzTWFuYWdlbWVudFNlY3JldA== #mraAssetsManagementSecret
+  jwt-secret: S0pOamtzZWZzam5mTzg5M3IzNDM0amJKSGJzanJmaGJoNDM0NTM0OGJzZWJmSGJqc2VoYmYyNDI4Mzk0NXk=
+  mongodb-connection-string: secret here
