--- a/k8s/assets-secret.yml
+++ b/k8s/assets-secret.yml
@@ -4,10 +4,10 @@ metadata:
   name: assets-secret-value
   # namespace: mra-staging
 data:
-  mongo-root-username: c3JwdXNlcg==  #srpuser
-  mongo-root-password: c3JwcGFzcw==  #srppass
-  mongo-express-username: TW9uZ29TcnA= #MongoSrp
-  mongo-express-password: TW9uZ28xMjM0JA== #Mongo1234$
-  identity-client-secret: bXJhQXNzZXRzTWFuYWdlbWVudFNlY3JldA== #mraAssetsManagementSecret
-  jwt-secret: S0pOamtzZWZzam5mTzg5M3IzNDM0amJKSGJzanJmaGJoNDM0NTM0OGJzZWJmSGJqc2VoYmYyNDI4Mzk0NXk=
+  mongo-root-username: secret here
+  mongo-root-password: secret here
+  mongo-express-username: secret here
+  mongo-express-password: secret here
+  identity-client-secret: secret here
+  jwt-secret: secret here
   mongodb-connection-string: secret here
