 updated staging env

--- a/src/Web/Server/appsettings.Staging.json
+++ b/src/Web/Server/appsettings.Staging.json
@@ -1,7 +1,7 @@
 {
   "IdentityServer": "http://10.111.7.79:5070/api",
   "MongoDb": {
-    "ConnectionString": "mongodb://srpuser:srppass@192.168.65.3:30168",
+    "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "mra-assets",
     "Seeder": true,
     "Version": 1
@@ -47,6 +47,8 @@
     "https://localhost:7091",
     "http://localhost:5202",
     "https://assets.srp.tj",
-    "https://staging.assets.srp.tj"
+    "https://www.assets.srp.tj",
+    "https://staging.assets.srp.tj",
+    "https://www.staging.assets.srp.tj"
   ]
 }
