updated cors to allow any *

--- a/src/Web/Server/appsettings.Staging.json
+++ b/src/Web/Server/appsettings.Staging.json
@@ -38,6 +38,7 @@
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
+  "AllowedHosts": "*",
   "Application":
   {
     "Id": "6ba7b810-9dad-11d1-80b4-00c04fd430c8",
@@ -46,6 +47,7 @@
   "MraAssetsManagement-CORS":[
     "https://localhost:7091",
     "http://localhost:5202",
+    "http://localhost:4200",
     "https://assets.srp.tj",
     "https://www.assets.srp.tj",
     "https://staging.assets.srp.tj",
