--- a/src/Web/Server/appsettings.Staging.json
+++ b/src/Web/Server/appsettings.Staging.json
@@ -1,5 +1,5 @@
 {
-  "IdentityServer": "https://api.srp.tj/staging/identity",
+  "IdentityServer": "http://10.111.7.79:5070/api",
   "MongoDb": {
     "ConnectionString": "mongodb://mongodb:27017",
     "DatabaseName": "mra-assets",
