update employee service

--- a/src/Web/Server/appsettings.Staging.json
+++ b/src/Web/Server/appsettings.Staging.json
@@ -1,9 +1,9 @@
 {
-  "IdentityServer": "http://10.111.7.79:5070/api",
+  "IdentityServer": "http://10.100.44.230:5070/api",
   "MongoDb": {
     "ConnectionString": "mongodb://mongodb:27017",
     "DatabaseName": "mra-assets",
-    "Seeder": true,
+    "Seeder": false,
     "Version": 1
   },
   "Logging": {
